--- a/style.css
+++ b/style.css
@@ -328,3 +328,10 @@ h1 {
 .rightPart {
   margin-top: 100px;
 }
+
+::placeholder {
+  font-size: 20px;
+  word-wrap: normal;
+  vertical-align: middle;
+  padding: 10px;
+}
